--- a/now.json
+++ b/now.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "name": "paper",
   "builds": [
-    { "src": "/dist/apps/api/main.js", "use": "@now/node" },
-    { "src": "/dist/apps/paper-manager/*", "use": "@now/static" }
+    { "src": "/dist/apps/paper-manager/*", "use": "@now/static" },
+    { "src": "/dist/apps/api/main.js", "use": "@now/node-server" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/dist/apps/api/main.js" },
